--- a/package.json
+++ b/package.json
@@ -36,9 +36,11 @@
     "eslint-config-next": "15.2.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
-    "msw": "^2.7.3",
+    "msw": "^1.3.3",
     "tailwindcss": "^4",
     "ts-jest": "^29.2.6",
-    "typescript": "^5"
+    "ts-node": "^10.9.2",
+    "typescript": "^5",
+    "whatwg-fetch": "^3.6.20"
   }
 }
