--- a/package.json
+++ b/package.json
@@ -32,14 +32,21 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "@vitest/coverage-c8": "^0.33.0",
+    "@vitejs/plugin-react": "^4.3.4",
+    "@vitest/coverage-istanbul": "^3.0.7",
+    "@vitest/ui": "^3.0.7",
     "eslint": "^9",
     "eslint-config-next": "15.2.0",
+    "happy-dom": "^17.1.9",
     "jest-environment-jsdom": "^29.7.0",
     "jsdom": "^26.0.0",
     "msw": "^2.7.3",
     "tailwindcss": "^4",
     "typescript": "^5",
-    "vitest": "^3.0.7"
+    "vite": "^6.0.2",
+    "vite-tsconfig-paths": "^5.1.3",
+    "vitest": "^3.0.7",
+    "vitest-axe": "v1.0.0-pre.3",
+    "vitest-canvas-mock": "^0.3.3"
   }
 }
